--- a/.eslintignore
+++ b/.eslintignore
@@ -1,3 +1,17 @@
+# project
 packages/**/dist/**
 examples
 node_modules
+
+# macOS
+.DS_Store
+
+# windows
+[Dd]esktop.ini
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
