--- a/examples/both/package.json
+++ b/examples/both/package.json
@@ -15,6 +15,7 @@
 		"@types/loadable__component": "^5.13.4",
 		"@types/loadable__server": "^5.12.6",
 		"@types/react": "^17.0.29",
-		"@types/react-dom": "^17.0.9"
+		"@types/react-dom": "^17.0.9",
+		"@types/webpack-env": "^1.16.3"
 	}
 }
