--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -22,17 +22,25 @@
 	},
 	"dependencies": {
 		"@babel/core": "^7.15.8",
+		"@babel/plugin-transform-runtime": "^7.15.8",
 		"@babel/preset-env": "^7.15.8",
 		"@babel/preset-react": "^7.14.5",
-		"@ceop/logger": "^1.0.0",
+		"@babel/preset-typescript": "^7.15.0",
+		"@babel/runtime": "^7.15.4",
+		"@ceop/mute-hmr": "^1.0.0",
 		"@ceop/utils": "^1.0.0",
+		"@rollup/plugin-replace": "^3.0.0",
 		"babel-loader": "^8.2.2",
+		"babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+		"consola": "^2.15.3",
 		"core-js": "^3.18.3",
-		"razzle-start-server-webpack-plugin": "^4.1.0",
-		"ts-loader": "^9.2.6",
+		"dotenv": "^10.0.0",
+		"dotenv-expand": "^5.1.0",
+		"razzle-start-server-webpack-plugin": "^4.2.1",
 		"tsconfig-paths-webpack-plugin": "^3.5.1",
 		"webpack": "^5.53.0",
 		"webpack-dev-server": "^4.2.1",
+		"webpack-format-messages": "^3.0.1",
 		"webpack-node-externals": "^3.0.0"
 	},
 	"devDependencies": {
