--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+# project
+examples
 node_modules
 dist
+
+# macOS
 .DS_Store
+
+# windows
+[Dd]esktop.ini
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
