--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,6 @@
 	"extends": "./tsconfig.build.json",
 	"include": ["packages"],
 	"compilerOptions": {
-		"allowJs": false,
-		"baseUrl": ".",
-		"paths": {
-			"@ceop/utils": ["packages/utils/src"],
-			"@ceop/core": ["packages/core/src"],
-			"@ceop/cli": ["packages/cli/src"]
-		}
+		"allowJs": false
 	}
 }
