--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
 
 	"eslint.alwaysShowStatus": true,
 	"eslint.validate": ["javascript", "typescript"],
+	"eslint.workingDirectories": ["packages/*"],
 
 	"[javascript]": {
 		"editor.formatOnSave": false,
