--- a/examples/both/package.json
+++ b/examples/both/package.json
@@ -1,21 +1,24 @@
 {
-	"scripts": {
-		"start": "../../packages/cli/src/index.js start",
-		"build": "../../packages/cli/src/index.js build"
-	},
-	"dependencies": {
-		"@loadable/component": "^5.15.0",
-		"@loadable/server": "^5.15.1",
-		"express": "^4.17.1",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2"
-	},
-	"devDependencies": {
-		"@types/express": "^4.17.13",
-		"@types/loadable__component": "^5.13.4",
-		"@types/loadable__server": "^5.12.6",
-		"@types/react": "^17.0.29",
-		"@types/react-dom": "^17.0.9",
-		"@types/webpack-env": "^1.16.3"
-	}
+  "scripts": {
+    "start": "../../packages/cli/src/index.js start",
+    "build": "../../packages/cli/src/index.js build"
+  },
+  "dependencies": {
+    "@loadable/component": "^5.15.0",
+    "@loadable/server": "^5.15.1",
+    "express": "^4.17.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/loadable__component": "^5.13.4",
+    "@types/loadable__server": "^5.12.6",
+    "@types/react": "^17.0.29",
+    "@types/react-dom": "^17.0.9",
+    "@types/webpack-env": "^1.16.3"
+  },
+  "browserslist": [
+    "defaults"
+  ]
 }
