--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -25,8 +25,11 @@
 		"webpack": "^5.53.0"
 	},
 	"dependencies": {
+		"browserslist": "^4.17.4",
+		"consola": "^2.15.3",
 		"detect-port-alt": "^1.1.6",
 		"fs-extra": "^10.0.0",
+		"pkg-up": "^3.1.0",
 		"yup": "^0.32.9"
 	}
 }
