--- a/packages/mute-hmr/package.json
+++ b/packages/mute-hmr/package.json
@@ -19,5 +19,6 @@
 	},
 	"bugs": {
 		"url": "https://github.com/ceopaludetto/ceop/issues"
-	}
+	},
+	"gitHead": "fc73eeca407ad08f805a49805681ebb74bc3f962"
 }
