--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -31,5 +31,6 @@
 		"fs-extra": "^10.0.0",
 		"pkg-up": "^3.1.0",
 		"yup": "^0.32.9"
-	}
+	},
+	"gitHead": "fc73eeca407ad08f805a49805681ebb74bc3f962"
 }
