fix: add publish config access to every package.json

--- a/packages/mute-hmr/package.json
+++ b/packages/mute-hmr/package.json
@@ -17,5 +17,8 @@
 	"bugs": {
 		"url": "https://github.com/ceopaludetto/ceop/issues"
 	},
-	"gitHead": "b57288938742a930f9fae3e4ce8311280eb267aa"
+	"gitHead": "39dbc256dc641012323e2505121f49d75b63fe7f",
+	"publishConfig": {
+		"access": "public"
+	}
 }
