--- a/packages/plugin-css/package.json
+++ b/packages/plugin-css/package.json
@@ -30,5 +30,8 @@
 		"sass-loader": "^12.2.0",
 		"style-loader": "^3.3.0"
 	},
-	"gitHead": "b57288938742a930f9fae3e4ce8311280eb267aa"
+	"gitHead": "39dbc256dc641012323e2505121f49d75b63fe7f",
+	"publishConfig": {
+		"access": "public"
+	}
 }
