--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -15,5 +15,8 @@
 		"@ceop/core": "^1.0.4",
 		"commander": "^8.2.0"
 	},
-	"gitHead": "b57288938742a930f9fae3e4ce8311280eb267aa"
+	"gitHead": "39dbc256dc641012323e2505121f49d75b63fe7f",
+	"publishConfig": {
+		"access": "public"
+	}
 }
