--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -43,5 +43,8 @@
 		"@types/webpack-dev-server": "^4.1.0",
 		"@types/webpack-node-externals": "^2.5.2"
 	},
-	"gitHead": "b57288938742a930f9fae3e4ce8311280eb267aa"
+	"gitHead": "39dbc256dc641012323e2505121f49d75b63fe7f",
+	"publishConfig": {
+		"access": "public"
+	}
 }
