--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
 		"example:both": "cd examples/both && yarn build",
 		"example:serveronly": "cd examples/serveronly && yarn build",
 		"prepublish": "lerna run lint && lerna run build",
-		"publish": "lerna publish --force-publish --contents dist"
+		"publish": "lerna publish --force-publish"
 	}
 }
