--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ceop/core",
-	"version": "1.1.3",
+	"version": "1.2.0",
 	"description": "> TODO: description",
 	"author": "Carlos Eduardo <ceo.paludetto@gmail.com>",
 	"homepage": "",
@@ -24,8 +24,8 @@
 		"@babel/preset-react": "^7.14.5",
 		"@babel/preset-typescript": "^7.15.0",
 		"@babel/runtime": "^7.15.4",
-		"@ceop/mute-hmr": "^1.1.3",
-		"@ceop/utils": "^1.1.3",
+		"@ceop/mute-hmr": "^1.2.0",
+		"@ceop/utils": "^1.2.0",
 		"@rollup/plugin-replace": "^3.0.0",
 		"babel-loader": "^8.2.2",
 		"babel-plugin-transform-react-remove-prop-types": "^0.4.24",
@@ -33,6 +33,7 @@
 		"dotenv": "^10.0.0",
 		"dotenv-expand": "^5.1.0",
 		"razzle-start-server-webpack-plugin": "^4.2.1",
+		"terser-webpack-plugin": "^5.2.4",
 		"tsconfig-paths-webpack-plugin": "^3.5.1",
 		"webpack": "^5.53.0",
 		"webpack-dev-server": "^4.2.1",
