--- a/packages/plugin-css/package.json
+++ b/packages/plugin-css/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ceop/plugin-css",
-	"version": "1.1.3",
+	"version": "1.2.0",
 	"description": "> TODO: description",
 	"author": "Carlos Eduardo <ceo.paludetto@gmail.com>",
 	"homepage": "",
@@ -18,16 +18,14 @@
 		"lint": "eslint src/* --fix"
 	},
 	"dependencies": {
-		"@ceop/utils": "^1.1.3",
+		"@ceop/utils": "^1.2.0",
 		"css-loader": "^6.4.0",
+		"css-minimizer-webpack-plugin": "^3.1.1",
 		"css-modules-typescript-loader": "^4.0.1",
 		"mini-css-extract-plugin": "^2.4.2",
 		"postcss": "^8.3.9",
 		"postcss-loader": "^6.2.0",
 		"postcss-preset-env": "^6.7.0",
-		"resolve-url-loader": "^4.0.0",
-		"sass": "^1.43.2",
-		"sass-loader": "^12.2.0",
 		"style-loader": "^3.3.0"
 	},
 	"gitHead": "b8dd93fc374a2efa2d4a991f48a574e046a996b3",
