--- a/package.json
+++ b/package.json
@@ -4,9 +4,17 @@
 	"workspaces": [
 		"packages/*"
 	],
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/ceopaludetto/ceop"
+	},
 	"devDependencies": {
+		"@commitlint/cli": "^13.2.1",
+		"@commitlint/config-conventional": "^13.2.0",
 		"@typescript-eslint/eslint-plugin": "^4.31.2",
 		"@typescript-eslint/parser": "^4.31.2",
+		"commitizen": "^4.2.4",
+		"cz-conventional-changelog": "^3.3.0",
 		"eslint": "^7.32.0",
 		"eslint-config-airbnb-base": "^14.2.1",
 		"eslint-config-airbnb-typescript": "^14.0.0",
@@ -14,13 +22,16 @@
 		"eslint-plugin-import": "^2.24.2",
 		"eslint-plugin-import-helpers": "^1.1.0",
 		"eslint-plugin-prettier": "^4.0.0",
+		"husky": "^7.0.2",
 		"lerna": "^4.0.0",
+		"lerna-changelog": "^2.2.0",
 		"prettier": "^2.4.1",
 		"tsdx": "^0.14.1",
 		"tslib": "^2.3.1",
 		"typescript": "^4.4.3"
 	},
 	"scripts": {
+		"prepare": "husky install",
 		"bootstrap": "lerna bootstrap",
 		"start": "lerna run start --stream --parallel",
 		"build": "lerna run build",
@@ -28,5 +39,16 @@
 		"example:serveronly": "cd examples/serveronly && yarn start",
 		"prepublish": "lerna run lint && lerna run build",
 		"publish": "lerna publish --force-publish"
+	},
+	"changelog": {
+		"labels": {
+			"feat": "Feature",
+			"bug": "Bug Fix"
+		}
+	},
+	"config": {
+		"commitizen": {
+			"path": "cz-conventional-changelog"
+		}
 	}
 }
