--- a/lerna.json
+++ b/lerna.json
@@ -3,9 +3,15 @@
 	"npmClient": "yarn",
 	"useWorkspaces": true,
 	"version": "independent",
+	"changelogPreset": "angular",
 	"command": {
 		"version": {
+			"allowBranch": "master",
 			"message": "chore(release): publish %s"
+		},
+		"publish": {
+			"conventionalCommits": true,
+			"allowBranch": "master"
 		}
 	}
 }
