--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -2,9 +2,9 @@
 	"name": "@ceop/cli",
 	"version": "1.2.6",
 	"description": "> TODO: description",
-	"author": "Carlos Eduardo <ceo.paludetto@gmail.com>",
 	"homepage": "",
 	"license": "MIT",
+	"author": "Carlos Eduardo <ceo.paludetto@gmail.com>",
 	"bin": {
 		"ceop": "src/index.js"
 	},
@@ -15,8 +15,8 @@
 		"@ceop/core": "^1.2.6",
 		"commander": "^8.2.0"
 	},
-	"gitHead": "b955c49c23573867f9bf9c1a197d90f423de496e",
 	"publishConfig": {
 		"access": "public"
-	}
+	},
+	"gitHead": "b955c49c23573867f9bf9c1a197d90f423de496e"
 }
