--- a/packages/plugin-file/package.json
+++ b/packages/plugin-file/package.json
@@ -19,8 +19,7 @@
 		"test": "tsdx test"
 	},
 	"dependencies": {
-		"@ceop/utils": "^1.2.9",
-		"file-loader": "^6.2.0"
+		"@ceop/utils": "^1.2.9"
 	},
 	"devDependencies": {
 		"webpack": "^5.60.0"
