--- a/packages/plugin-typescript/package.json
+++ b/packages/plugin-typescript/package.json
@@ -18,7 +18,8 @@
 		"start": "tsdx watch --tsconfig ./tsconfig.json"
 	},
 	"dependencies": {
-		"@ceop/utils": "^1.3.1"
+		"@ceop/utils": "^1.3.1",
+		"ts-loader": "^9.2.6"
 	},
 	"devDependencies": {
 		"webpack": "^5.60.0"
