fix: hot reload issues related to server

--- a/packages/mute-hmr/package.json
+++ b/packages/mute-hmr/package.json
@@ -13,6 +13,7 @@
 	"license": "MIT",
 	"author": "Carlos Eduardo <ceo.paludetto@gmail.com>",
 	"main": "src/index.js",
+	"module": "src/index.js",
 	"files": [
 		"src",
 		"package.json"
