feat: remove lerna, add turborepo, add two new packages, eslint and typescript

--- a/packages/plugin-compress/package.json
+++ b/packages/plugin-compress/package.json
@@ -23,6 +23,8 @@
 		"compression-webpack-plugin": "^9.0.0"
 	},
 	"devDependencies": {
+		"@ceop/eslint": "*",
+		"@ceop/typescript": "*",
 		"webpack": "^5.60.0"
 	},
 	"publishConfig": {
