--- a/packages/plugin-typescript/package.json
+++ b/packages/plugin-typescript/package.json
@@ -22,6 +22,8 @@
 		"ts-loader": "^9.2.6"
 	},
 	"devDependencies": {
+		"@ceop/eslint": "*",
+		"@ceop/typescript": "*",
 		"webpack": "^5.60.0"
 	},
 	"publishConfig": {
