--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
 		"packages/*"
 	],
 	"scripts": {
-		"bootstrap": "lerna bootstrap",
-		"build": "lerna run build",
+		"build": "turbo run build",
+		"lint": "turbo run lint",
 		"prepare": "husky install",
-		"prepublish": "lerna run lint && lerna run test && lerna run build",
-		"publish": "lerna publish",
-		"start": "lerna run start --stream --parallel",
-		"test": "lerna run test"
+		"publish": "turbo run publish",
+		"start": "turbo run start",
+		"test": "turbo run test -- --coverage"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^13.2.1",
@@ -30,17 +29,43 @@
 		"eslint-plugin-import-helpers": "^1.1.0",
 		"eslint-plugin-prettier": "^4.0.0",
 		"husky": "^7.0.2",
-		"lerna": "^4.0.0",
 		"prettier": "^2.4.1",
 		"prettier-plugin-packagejson": "^2.2.13",
 		"tsdx": "^0.14.1",
 		"tslib": "^2.3.1",
+		"turbo": "^1.0.9",
 		"typescript": "^4.4.3"
 	},
 	"changelog": {
 		"labels": {
 			"feat": "Feature",
 			"bug": "Bug Fix"
+		}
+	},
+	"turbo": {
+		"baseBranch": "origin/master",
+		"pipeline": {
+			"lint": {},
+			"build": {
+				"outputs": [
+					"dist/**"
+				],
+				"dependsOn": [
+					"^build"
+				]
+			},
+			"test": {
+				"dependsOn": [
+					"build"
+				]
+			},
+			"publish": {
+				"dependsOn": [
+					"lint",
+					"build",
+					"test"
+				]
+			}
 		}
 	}
 }
