--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -41,6 +41,8 @@
 		"webpack-node-externals": "^3.0.0"
 	},
 	"devDependencies": {
+		"@ceop/eslint": "*",
+		"@ceop/typescript": "*",
 		"@types/webpack-node-externals": "^2.5.2"
 	},
 	"publishConfig": {
