--- a/packages/plugin-css/package.json
+++ b/packages/plugin-css/package.json
@@ -29,6 +29,8 @@
 		"style-loader": "^3.3.0"
 	},
 	"devDependencies": {
+		"@ceop/eslint": "*",
+		"@ceop/typescript": "*",
 		"webpack": "^5.60.0"
 	},
 	"publishConfig": {
