--- a/packages/plugin-file/package.json
+++ b/packages/plugin-file/package.json
@@ -22,6 +22,8 @@
 		"@ceop/utils": "^1.3.1"
 	},
 	"devDependencies": {
+		"@ceop/eslint": "*",
+		"@ceop/typescript": "*",
 		"webpack": "^5.60.0"
 	},
 	"publishConfig": {
