fix: eslint configuration and update deps in all packages

--- a/package.json
+++ b/package.json
@@ -13,21 +13,12 @@
 		"lint": "turbo run lint",
 		"prepare": "husky install",
 		"publish": "turbo run publish",
-		"start": "turbo run start",
+		"start": "turbo run start --parallel",
 		"test": "turbo run test -- --coverage"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^13.2.1",
 		"@commitlint/config-conventional": "^13.2.0",
-		"@typescript-eslint/eslint-plugin": "^4.31.2",
-		"@typescript-eslint/parser": "^4.31.2",
-		"eslint": "^7.32.0",
-		"eslint-config-airbnb-base": "^14.2.1",
-		"eslint-config-airbnb-typescript": "^14.0.0",
-		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-import": "^2.24.2",
-		"eslint-plugin-import-helpers": "^1.1.0",
-		"eslint-plugin-prettier": "^4.0.0",
 		"husky": "^7.0.2",
 		"prettier": "^2.4.1",
 		"prettier-plugin-packagejson": "^2.2.13",
