--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -14,7 +14,7 @@
 	],
 	"scripts": {
 		"build": "tsdx build --tsconfig ./tsconfig.json",
-		"lint": "eslint src/* --fix",
+		"lint": "eslint \"src/*\" --fix",
 		"start": "tsdx watch --tsconfig ./tsconfig.json"
 	},
 	"dependencies": {
@@ -43,7 +43,8 @@
 	"devDependencies": {
 		"@ceop/eslint": "*",
 		"@ceop/typescript": "*",
-		"@types/webpack-node-externals": "^2.5.2"
+		"@types/webpack-node-externals": "^2.5.2",
+		"eslint": "^7.0.0"
 	},
 	"publishConfig": {
 		"access": "public"
