--- a/packages/eslint/package.json
+++ b/packages/eslint/package.json
@@ -2,16 +2,20 @@
 	"name": "@ceop/eslint",
 	"version": "1.0.0",
 	"private": true,
-	"main": "eslint.js",
+	"main": "main.js",
 	"files": [
-		"eslint.js"
+		"base.js"
 	],
-	"devDependencies": {
-		"eslint-config-airbnb-base": "^14.2.1",
-		"eslint-config-airbnb-typescript": "^14.0.0",
+	"dependencies": {
+		"@ceop/typescript": "*",
+		"@typescript-eslint/eslint-plugin": "^4.0.1",
+		"@typescript-eslint/parser": "^4.0.1",
 		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-import": "^2.24.2",
-		"eslint-plugin-import-helpers": "^1.1.0",
-		"eslint-plugin-prettier": "^4.0.0"
+		"eslint-config-standard-with-typescript": "^21.0.1",
+		"eslint-plugin-import": "^2.25.3",
+		"eslint-plugin-import-helpers": "^1.2.0",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-prettier": "^4.0.0",
+		"eslint-plugin-promise": "^5.2.0"
 	}
 }
