--- a/packages/plugin-loadable/package.json
+++ b/packages/plugin-loadable/package.json
@@ -14,7 +14,7 @@
 	],
 	"scripts": {
 		"build": "tsdx build --tsconfig ./tsconfig.json",
-		"lint": "eslint src/* --fix",
+		"lint": "eslint \"src/*\" --fix",
 		"start": "tsdx watch --tsconfig ./tsconfig.json",
 		"test": "tsdx test"
 	},
@@ -26,6 +26,7 @@
 	"devDependencies": {
 		"@ceop/eslint": "*",
 		"@ceop/typescript": "*",
+		"eslint": "^7.0.0",
 		"webpack": "^5.60.0"
 	},
 	"publishConfig": {
