--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -14,7 +14,7 @@
 	],
 	"scripts": {
 		"build": "tsdx build --tsconfig ./tsconfig.json",
-		"lint": "eslint src/* --fix",
+		"lint": "eslint \"src/*\" --fix",
 		"start": "tsdx watch --tsconfig ./tsconfig.json",
 		"test": "tsdx test"
 	},
@@ -29,6 +29,7 @@
 	"devDependencies": {
 		"@ceop/eslint": "*",
 		"@types/fs-extra": "^9.0.13",
+		"eslint": "^7.0.0",
 		"webpack": "^5.60.0"
 	},
 	"publishConfig": {
