--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -41,10 +41,12 @@
 		"webpack-node-externals": "^3.0.0"
 	},
 	"devDependencies": {
-		"@ceop/eslint": "*",
 		"@ceop/typescript": "*",
+		"@rushstack/eslint-config": "^2.5.0",
 		"@types/webpack-node-externals": "^2.5.2",
-		"eslint": "^7.0.0"
+		"eslint": "^8.4.1",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-prettier": "^4.0.0"
 	},
 	"publishConfig": {
 		"access": "public"
