--- a/packages/plugin-loadable/package.json
+++ b/packages/plugin-loadable/package.json
@@ -24,9 +24,11 @@
 		"@loadable/webpack-plugin": "^5.15.1"
 	},
 	"devDependencies": {
-		"@ceop/eslint": "*",
 		"@ceop/typescript": "*",
-		"eslint": "^7.0.0",
+		"@rushstack/eslint-config": "^2.5.0",
+		"eslint": "^8.4.1",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-prettier": "^4.0.0",
 		"webpack": "^5.60.0"
 	},
 	"publishConfig": {
