--- a/packages/plugin-typescript/package.json
+++ b/packages/plugin-typescript/package.json
@@ -22,9 +22,11 @@
 		"ts-loader": "^9.2.6"
 	},
 	"devDependencies": {
-		"@ceop/eslint": "*",
 		"@ceop/typescript": "*",
-		"eslint": "^7.0.0",
+		"@rushstack/eslint-config": "^2.5.0",
+		"eslint": "^8.4.1",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-prettier": "^4.0.0",
 		"webpack": "^5.60.0"
 	},
 	"publishConfig": {
