--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -32,6 +32,7 @@
 		"core-js": "^3.18.3",
 		"dotenv": "^10.0.0",
 		"dotenv-expand": "^5.1.0",
+		"nodemon-webpack-plugin": "^4.7.0",
 		"razzle-start-server-webpack-plugin": "^4.2.1",
 		"terser-webpack-plugin": "^5.2.4",
 		"tsconfig-paths-webpack-plugin": "^3.5.1",
