--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
 		"build": "turbo run build",
 		"lint": "turbo run lint",
 		"prepare": "husky install",
-		"publish": "turbo run publish",
+		"prerelease": "turbo run publish && lerna version --no-push",
+		"release": "lerna publish from-git --yes",
+		"postrelease": "git push --follow-tags origin",
 		"start": "turbo run start --parallel",
 		"test": "turbo run test -- --coverage"
 	},
@@ -20,6 +22,7 @@
 		"@commitlint/cli": "^13.2.1",
 		"@commitlint/config-conventional": "^13.2.0",
 		"husky": "^7.0.2",
+		"lerna": "^4.0.0",
 		"prettier": "^2.4.1",
 		"prettier-plugin-packagejson": "^2.2.13",
 		"tsdx": "^0.14.1",
