--- a/packages/typescript/package.json
+++ b/packages/typescript/package.json
@@ -1,9 +1,12 @@
 {
 	"name": "@ceop/typescript",
-	"version": "1.0.0",
+	"version": "1.1.0",
 	"private": true,
 	"main": "main.js",
 	"files": [
 		"base.json"
-	]
+	],
+	"publishConfig": {
+		"access": "public"
+	}
 }
