--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ceop/core",
-	"version": "1.5.0",
+	"version": "1.6.0",
 	"description": "> TODO: description",
 	"homepage": "",
 	"license": "MIT",
@@ -24,8 +24,8 @@
 		"@babel/preset-react": "^7.14.5",
 		"@babel/preset-typescript": "^7.15.0",
 		"@babel/runtime": "^7.15.4",
-		"@ceop/mute-hmr": "^1.3.0",
-		"@ceop/utils": "^1.4.0",
+		"@ceop/mute-hmr": "^1.3.1",
+		"@ceop/utils": "^1.5.0",
 		"@rollup/plugin-replace": "^3.0.0",
 		"babel-loader": "^8.2.2",
 		"babel-plugin-transform-react-remove-prop-types": "^0.4.24",
@@ -42,7 +42,7 @@
 		"webpack-node-externals": "^3.0.0"
 	},
 	"devDependencies": {
-		"@ceop/typescript": "*",
+		"@ceop/typescript": "^1.2.0",
 		"@rushstack/eslint-config": "^2.5.0",
 		"@types/webpack-node-externals": "^2.5.2",
 		"eslint": "^8.4.1",
