--- a/packages/plugin-compress/package.json
+++ b/packages/plugin-compress/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ceop/plugin-compress",
-	"version": "1.3.0",
+	"version": "1.4.0",
 	"description": "> TODO: description",
 	"homepage": "",
 	"license": "MIT",
@@ -19,11 +19,11 @@
 		"test": "tsdx test"
 	},
 	"dependencies": {
-		"@ceop/utils": "^1.4.0",
+		"@ceop/utils": "^1.5.0",
 		"compression-webpack-plugin": "^9.0.0"
 	},
 	"devDependencies": {
-		"@ceop/typescript": "*",
+		"@ceop/typescript": "^1.2.0",
 		"@rushstack/eslint-config": "^2.5.0",
 		"eslint": "^8.4.1",
 		"eslint-config-prettier": "^8.3.0",
