--- a/packages/plugin-loadable/package.json
+++ b/packages/plugin-loadable/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ceop/plugin-loadable",
-	"version": "1.3.0",
+	"version": "1.4.0",
 	"description": "> TODO: description",
 	"homepage": "",
 	"license": "MIT",
@@ -19,12 +19,12 @@
 		"test": "tsdx test"
 	},
 	"dependencies": {
-		"@ceop/utils": "^1.4.0",
+		"@ceop/utils": "^1.5.0",
 		"@loadable/babel-plugin": "^5.13.2",
 		"@loadable/webpack-plugin": "^5.15.1"
 	},
 	"devDependencies": {
-		"@ceop/typescript": "*",
+		"@ceop/typescript": "^1.2.0",
 		"@rushstack/eslint-config": "^2.5.0",
 		"eslint": "^8.4.1",
 		"eslint-config-prettier": "^8.3.0",
