--- a/packages/plugin-typescript/package.json
+++ b/packages/plugin-typescript/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ceop/plugin-typescript",
-	"version": "1.2.0",
+	"version": "1.3.0",
 	"description": "> TODO: description",
 	"homepage": "",
 	"license": "MIT",
@@ -18,11 +18,11 @@
 		"start": "tsdx watch --tsconfig ./tsconfig.json"
 	},
 	"dependencies": {
-		"@ceop/utils": "^1.4.0",
+		"@ceop/utils": "^1.5.0",
 		"ts-loader": "^9.2.6"
 	},
 	"devDependencies": {
-		"@ceop/typescript": "*",
+		"@ceop/typescript": "^1.2.0",
 		"@rushstack/eslint-config": "^2.5.0",
 		"eslint": "^8.4.1",
 		"eslint-config-prettier": "^8.3.0",
