--- a/packages/plugin-loadable/package.json
+++ b/packages/plugin-loadable/package.json
@@ -6,22 +6,22 @@
 	"license": "MIT",
 	"author": "Carlos Eduardo <ceo.paludetto@gmail.com>",
 	"main": "dist/index.js",
-	"module": "dist/plugin-loadable.esm.js",
+	"module": "dist/index.mjs",
 	"typings": "dist/index.d.ts",
 	"files": [
 		"dist",
 		"README.md"
 	],
 	"scripts": {
-		"build": "tsdx build --tsconfig ./tsconfig.json",
+		"build": "tsup-node src/index.ts --format cjs,esm --dts --clean",
 		"lint": "eslint \"src/*\" --fix",
-		"start": "tsdx watch --tsconfig ./tsconfig.json",
+		"start": "tsup-node src/index.ts --format cjs,esm --dts --watch",
 		"test": "tsdx test"
 	},
 	"dependencies": {
 		"@ceop/utils": "^1.5.1",
 		"@loadable/babel-plugin": "^5.13.2",
-		"@loadable/webpack-plugin": "^5.15.1"
+		"@loadable/webpack-plugin": "^5.15.2"
 	},
 	"devDependencies": {
 		"@ceop/typescript": "^1.2.1",
@@ -29,7 +29,7 @@
 		"eslint": "^8.4.1",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^4.0.0",
-		"webpack": "^5.60.0"
+		"webpack": "^5.65.0"
 	},
 	"publishConfig": {
 		"access": "public"
