--- a/package.json
+++ b/package.json
@@ -10,25 +10,27 @@
 	],
 	"scripts": {
 		"build": "turbo run build",
+		"link:all": "lerna exec -- yarn link",
 		"lint": "turbo run lint",
 		"prepare": "husky install",
 		"prerelease": "turbo run publish && lerna version --no-push",
 		"release": "lerna publish from-git --yes",
 		"postrelease": "git push --follow-tags origin",
 		"start": "turbo run start --parallel",
-		"test": "turbo run test -- --coverage"
+		"test": "turbo run test -- --coverage",
+		"unlink:all": "lerna exec -- yarn unlink"
 	},
 	"devDependencies": {
-		"@commitlint/cli": "^13.2.1",
-		"@commitlint/config-conventional": "^13.2.0",
-		"husky": "^7.0.2",
+		"@commitlint/cli": "^15.0.0",
+		"@commitlint/config-conventional": "^15.0.0",
+		"husky": "^7.0.4",
 		"lerna": "^4.0.0",
-		"prettier": "^2.4.1",
-		"prettier-plugin-packagejson": "^2.2.13",
-		"tsdx": "^0.14.1",
+		"prettier": "^2.5.1",
+		"prettier-plugin-packagejson": "^2.2.15",
 		"tslib": "^2.3.1",
-		"turbo": "^1.0.9",
-		"typescript": "^4.4.3"
+		"tsup": "^5.11.6",
+		"turbo": "^1.0.14",
+		"typescript": "^4.5.4"
 	},
 	"changelog": {
 		"labels": {
