--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,38 +6,36 @@
 	"license": "MIT",
 	"author": "Carlos Eduardo <ceo.paludetto@gmail.com>",
 	"main": "dist/index.js",
-	"module": "dist/core.esm.js",
+	"module": "dist/index.mjs",
 	"typings": "dist/index.d.ts",
 	"files": [
 		"dist",
 		"README.md"
 	],
 	"scripts": {
-		"build": "tsdx build --tsconfig ./tsconfig.json",
+		"build": "tsup-node src/index.ts --format cjs,esm --dts --clean",
 		"lint": "eslint \"src/*\" --fix",
-		"start": "tsdx watch --tsconfig ./tsconfig.json"
+		"start": "tsup-node src/index.ts --format cjs,esm --dts --watch"
 	},
 	"dependencies": {
-		"@babel/core": "^7.15.8",
-		"@babel/plugin-transform-runtime": "^7.15.8",
-		"@babel/preset-env": "^7.15.8",
-		"@babel/preset-react": "^7.14.5",
-		"@babel/preset-typescript": "^7.15.0",
-		"@babel/runtime": "^7.15.4",
+		"@babel/core": "^7.16.5",
+		"@babel/plugin-transform-runtime": "^7.16.5",
+		"@babel/preset-env": "^7.16.5",
+		"@babel/preset-react": "^7.16.5",
+		"@babel/preset-typescript": "^7.16.5",
+		"@babel/runtime": "^7.16.5",
 		"@ceop/mute-hmr": "^1.3.1",
 		"@ceop/utils": "^1.5.1",
-		"@rollup/plugin-replace": "^3.0.0",
-		"babel-loader": "^8.2.2",
+		"babel-loader": "^8.2.3",
 		"babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-		"core-js": "^3.18.3",
+		"core-js": "^3.20.0",
 		"dotenv": "^10.0.0",
 		"dotenv-expand": "^5.1.0",
 		"nodemon-webpack-plugin": "^4.7.0",
-		"razzle-start-server-webpack-plugin": "^4.2.1",
-		"terser-webpack-plugin": "^5.2.4",
-		"tsconfig-paths-webpack-plugin": "^3.5.1",
-		"webpack": "^5.60.0",
-		"webpack-dev-server": "^4.2.1",
+		"terser-webpack-plugin": "^5.3.0",
+		"tsconfig-paths-webpack-plugin": "^3.5.2",
+		"webpack": "^5.65.0",
+		"webpack-dev-server": "^4.6.0",
 		"webpack-format-messages": "^3.0.1",
 		"webpack-node-externals": "^3.0.0"
 	},
