--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -40,6 +40,7 @@
 		"webpack-node-externals": "^3.0.0"
 	},
 	"devDependencies": {
+		"@ceop/test": "*",
 		"@ceop/typescript": "^1.2.1",
 		"@rushstack/eslint-config": "^2.5.0",
 		"@types/webpack-node-externals": "^2.5.2",
