--- a/packages/plugin-compress/package.json
+++ b/packages/plugin-compress/package.json
@@ -16,13 +16,14 @@
 		"build": "tsup-node src/index.ts --format cjs,esm --dts --clean",
 		"lint": "eslint \"src/*\" --fix",
 		"start": "tsup-node src/index.ts --format cjs,esm --dts --watch",
-		"test": "tsdx test"
+		"test": "jest"
 	},
 	"dependencies": {
 		"@ceop/utils": "^1.5.1",
 		"compression-webpack-plugin": "^9.2.0"
 	},
 	"devDependencies": {
+		"@ceop/test": "*",
 		"@ceop/typescript": "^1.2.1",
 		"@rushstack/eslint-config": "^2.5.0",
 		"eslint": "^8.4.1",
