--- a/packages/plugin-css/package.json
+++ b/packages/plugin-css/package.json
@@ -29,6 +29,7 @@
 		"style-loader": "^3.3.1"
 	},
 	"devDependencies": {
+		"@ceop/test": "*",
 		"@ceop/typescript": "^1.2.1",
 		"@rushstack/eslint-config": "^2.5.0",
 		"eslint": "^8.4.1",
