--- a/packages/plugin-loadable/package.json
+++ b/packages/plugin-loadable/package.json
@@ -16,7 +16,7 @@
 		"build": "tsup-node src/index.ts --format cjs,esm --dts --clean",
 		"lint": "eslint \"src/*\" --fix",
 		"start": "tsup-node src/index.ts --format cjs,esm --dts --watch",
-		"test": "tsdx test"
+		"test": "jest"
 	},
 	"dependencies": {
 		"@ceop/utils": "^1.5.1",
@@ -24,6 +24,7 @@
 		"@loadable/webpack-plugin": "^5.15.2"
 	},
 	"devDependencies": {
+		"@ceop/test": "*",
 		"@ceop/typescript": "^1.2.1",
 		"@rushstack/eslint-config": "^2.5.0",
 		"eslint": "^8.4.1",
