--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ceop/core",
-	"version": "1.6.1",
+	"version": "1.7.0",
 	"description": "> TODO: description",
 	"homepage": "",
 	"license": "MIT",
@@ -24,8 +24,8 @@
 		"@babel/preset-react": "^7.16.5",
 		"@babel/preset-typescript": "^7.16.5",
 		"@babel/runtime": "^7.16.5",
-		"@ceop/mute-hmr": "^1.3.1",
-		"@ceop/utils": "^1.5.1",
+		"@ceop/mute-hmr": "^1.4.0",
+		"@ceop/utils": "^1.6.0",
 		"babel-loader": "^8.2.3",
 		"babel-plugin-transform-react-remove-prop-types": "^0.4.24",
 		"core-js": "^3.20.0",
@@ -40,7 +40,7 @@
 		"webpack-node-externals": "^3.0.0"
 	},
 	"devDependencies": {
-		"@ceop/test": "*",
+		"@ceop/test": "^1.1.0",
 		"@ceop/typescript": "^1.2.1",
 		"@rushstack/eslint-config": "^2.5.0",
 		"@types/webpack-node-externals": "^2.5.2",
