--- a/packages/plugin-typescript/package.json
+++ b/packages/plugin-typescript/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ceop/plugin-typescript",
-	"version": "1.3.1",
+	"version": "1.4.0",
 	"description": "> TODO: description",
 	"homepage": "",
 	"license": "MIT",
@@ -18,11 +18,11 @@
 		"start": "tsup-node src/index.ts --format cjs,esm --dts --watch"
 	},
 	"dependencies": {
-		"@ceop/utils": "^1.5.1",
+		"@ceop/utils": "^1.6.0",
 		"ts-loader": "^9.2.6"
 	},
 	"devDependencies": {
-		"@ceop/test": "*",
+		"@ceop/test": "^1.1.0",
 		"@ceop/typescript": "^1.2.1",
 		"@rushstack/eslint-config": "^2.5.0",
 		"eslint": "^8.4.1",
